[gd_scene load_steps=26 format=3 uid="uid://cw8yqw6ihhvuq"]

[ext_resource type="Script" uid="uid://c2uugwaoi42c0" path="res://script/npc.gd" id="1_abqhh"]
[ext_resource type="Texture2D" uid="uid://ba7lca0o1e5eq" path="res://art/Character/Human-Worker-Red.png" id="1_nh2m4"]
[ext_resource type="PackedScene" uid="uid://c21t4gkhspxvv" path="res://scenes/dialogue.tscn" id="3_rv78h"]
[ext_resource type="AudioStream" uid="uid://d1uhkhu0pah1f" path="res://OST & SFX/Text.mp3" id="4_7n8xq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_abqhh"]
atlas = ExtResource("1_nh2m4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv78h"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8xq"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wlns"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl2vt"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwkja"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tygy"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sptji"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4e37"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h837"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl1un"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuru7"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyaq3"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf2ql"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gbmn"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvipr"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0klm"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2tho"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ca6vw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv78h")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wlns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl2vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwkja")
}],
"loop": false,
"name": &"Walk-E",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sptji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4e37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h837")
}],
"loop": false,
"name": &"Walk-N",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl1un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuru7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyaq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf2ql")
}],
"loop": false,
"name": &"Walk-S",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gbmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvipr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0klm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2tho")
}],
"loop": false,
"name": &"Walk-W",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d56e8"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t8u8m"]
radius = 5.0

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_abqhh")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.281, 1.219)
sprite_frames = SubResource("SpriteFrames_ca6vw")
animation = &"Idle"

[node name="Chat_Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chat_Detection"]
shape = SubResource("CircleShape2D_d56e8")

[node name="Dialogue" parent="." instance=ExtResource("3_rv78h")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_t8u8m")

[node name="TextSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7n8xq")
volume_db = -2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Chat_Detection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="Chat_Detection" to="." method="_on_chat_detection_body_exited"]
[connection signal="d_finished" from="Dialogue" to="." method="_on_dialogue_d_finished"]
